# image-gui-parser

./: .gitignore  CMakeLists.txt  README.md
src/: app.cc  app.h  fstream.h  window.cc  window.h  wx.cc
